--- a/css/style.css
+++ b/css/style.css
@@ -16,7 +16,7 @@ body {
 .container {
     max-width: 1200px;
     margin: 0 auto;
-    min-height: 800px;
+    min-height: 100vh;
 
     display: flex;
     justify-content: center;
@@ -25,7 +25,7 @@ body {
 
 .payment {
     width: 500px;
-    height: 600px;
+    height: 100%;
     background-color: #fff;
     padding: 60px;
 
@@ -40,14 +40,15 @@ body {
     text-decoration: none;
 }
 
-.link .thisPage{
+.link .thisPage {
     color: #03c7dd;
 }
 
-.link .thisPage::before{
+.link .thisPage::before {
     content: '\2192';
     margin: 5px;
-    vertical-align: 2px;
+    vertical-align: 1px;
+    font-size: 24px;
 }
 
 
@@ -59,11 +60,13 @@ body {
 
 .AddPeymentMethod {
     display: flex;
+    margin: 30px 0;
     padding: 30px;
     align-items: center;
     border-radius: 10px;
-    outline: 2px solid #cacaca;
+    outline: 3px solid #cacaca;
     cursor: pointer;
+    transition: all 0.5s ease;
 }
 
 .AddPeymentMethod img {
@@ -74,16 +77,27 @@ body {
 
 .AddPeymentMethod p {
     font-size: 14px;
+    font-weight: 500;
+}
+
+.AddPeymentMethod:hover {
+    outline: 3px solid #03c7dd;
+    box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.4);
 }
 
 .btn {
     background-color: #56eeff;
-    outline: 1px solid transparent;
     font-weight: bold;
     width: 100%;
     height: 50px;
-    margin: 30px 0;
     border-radius: 5px;
     font-size: 18px;
     cursor: pointer;
+    border: none;
+    box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.2s);
+    transition: all 0.5s ease;
+}
+
+.btn:hover {
+    box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.4);
 }
