--- a/css/style.css
+++ b/css/style.css
@@ -85,6 +85,47 @@ body {
     box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.4);
 }
 
+.popup {
+    display: none;
+    position: fixed;
+    z-index: 1;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgba(0, 0, 0, 0.5);
+    transition: all 0.5s ease;
+}
+
+.popup__content {
+    margin: 15% auto;
+    padding: 20px;
+
+    width: 80%;
+    height: 50%;
+    max-width: 600px;
+    
+    border-radius: 10px;
+    box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.4);
+    background-color: #fff;
+}
+
+.close {
+    color: #aaa;
+    float: right;   
+    font-size: 36px;
+    font-weight: bold;
+    transition: all 0.5s ease;
+}
+
+.close:hover,
+.close:focus {
+    color: #000;
+    text-decoration: none;
+    cursor: pointer;
+}
+
 .btn {
     background-color: #56eeff;
     font-weight: bold;
