--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,8 @@ html {
 }
 
 body {
-    background-color: rgb(213, 254, 255);
+    background-image: linear-gradient(to right top, #00ffbf, #00e5ff);
+    /* background-color: #d5feff; */
     font-family: "Montserrat", sans-serif;
 }
 
@@ -85,6 +86,24 @@ body {
     box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.4);
 }
 
+.btn {
+    background-color: #56eeff;
+    font-weight: bold;
+    width: 100%;
+    height: 50px;
+    border-radius: 5px;
+    font-size: 18px;
+    cursor: pointer;
+    border: none;
+    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.3);
+    transition: all 0.5s ease;
+}
+
+.btn:hover {
+    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.5);
+    background-color: #a0ffe7;
+}
+
 .popup {
     display: none;
     position: fixed;
@@ -99,21 +118,18 @@ body {
 }
 
 .popup__content {
-    margin: 15% auto;
-    padding: 20px;
-
+    margin: 10% auto;
     width: 80%;
-    height: 50%;
     max-width: 600px;
-    
-    border-radius: 10px;
+    border-radius: 20px;
     box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.4);
     background-color: #fff;
 }
 
 .close {
-    color: #aaa;
-    float: right;   
+    color: #676767;
+    float: right;
+    margin-right: 10px;
     font-size: 36px;
     font-weight: bold;
     transition: all 0.5s ease;
@@ -126,19 +142,47 @@ body {
     cursor: pointer;
 }
 
-.btn {
-    background-color: #56eeff;
-    font-weight: bold;
+.card__image {
     width: 100%;
-    height: 50px;
-    border-radius: 5px;
-    font-size: 18px;
-    cursor: pointer;
-    border: none;
-    box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.2s);
-    transition: all 0.5s ease;
+    height: 330px;
+    background-color: #d5feff;
+    border-radius: 20px 20px 0 0;
+    padding: 50px;
 }
 
-.btn:hover {
-    box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.4);
+.card {
+    width: 85%;
+    height: 100%;
+    margin: 0 auto;
+    border-radius: 10px;
+    background-image: linear-gradient(to right top, #00e5ff, #00ffbf);
+}
+
+.card__info {
+    height: 300px;
+    width: 100%;
+    padding: 35px;
+    background-color: #fff;
+    border-radius: 0 0 20px 20px;
+}
+
+.btn__cancel {
+    background-color: #fff;
+    color: #03c7dd;
+}
+
+.btn__cancel:hover {
+    background-color: #fff;
+}
+
+.btn-card {
+    margin: 20px;
+    height: 60px;
+}
+
+.section__btn {
+    display: flex;
+
+
+
 }
