--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,6 @@ html {
 
 body {
     background-image: linear-gradient(to right top, #00ffbf, #00e5ff);
-    /* background-color: #d5feff; */
     font-family: "Montserrat", sans-serif;
 }
 
@@ -91,7 +90,7 @@ body {
     font-weight: bold;
     width: 100%;
     height: 50px;
-    border-radius: 5px;
+    border-radius: 10px;
     font-size: 18px;
     cursor: pointer;
     border: none;
@@ -166,6 +165,46 @@ body {
     border-radius: 0 0 20px 20px;
 }
 
+.form__row {
+    display: flex;
+}
+
+.first-form{
+    width: 80%;
+    margin-right: 20px;
+}
+
+.form-group {
+    margin-bottom: 20px;
+}
+
+label {
+    display: block;
+}
+
+input[type="text"] {
+    width: 100%;
+    padding: 10px;
+    margin-top: 5px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    box-sizing: border-box;
+    background-color: #dbdbdb;
+}
+
+.section__btn {
+    display: flex;
+}
+
+.btn-card {
+
+    margin: 10px 30px 0 0;
+    height: 65px;
+}
+.btn-card:last-child{
+    margin-right: 0;
+}
+
 .btn__cancel {
     background-color: #fff;
     color: #03c7dd;
@@ -173,16 +212,4 @@ body {
 
 .btn__cancel:hover {
     background-color: #fff;
-}
-
-.btn-card {
-    margin: 20px;
-    height: 60px;
-}
-
-.section__btn {
-    display: flex;
-
-
-
 }
